--- a/app/assets/javascripts/templates/usernav.hbs
+++ b/app/assets/javascripts/templates/usernav.hbs
@@ -1,2 +1,6 @@
-<li class="item"><span class="sum prj">{{{uproject}}}</span></li>
-<li class="item"><span class="sum evn">{{{uevent}}}</span></li>
+{{#if user_data.user_project}}
+	<li class="item"><span class="sum prj">PROJECTS <span>{{user_data.user_project}}</span></span></li>
+{{/if}}
+{{#if user_data.user_event}}
+	<li class="item"><span class="sum prj">EVENTS <span>{{user_data.user_event}}</span></span></li>
+{{/if}}
