--- a/app/views/shared/icons/_icons.html.erb
+++ b/app/views/shared/icons/_icons.html.erb
@@ -68,5 +68,9 @@
 <title>Oval</title>
 <path class="path1" fill="#007bcd" d="M12.528 31.844c0 0 12.528-12.397 12.528-19.316s-5.609-12.528-12.528-12.528c-6.919 0-12.528 5.609-12.528 12.528s12.528 19.316 12.528 19.316z"></path>
 </symbol>
+<symbol id="icon-menu" viewBox="0 0 39 32">
+<title>menu</title>
+<path class="path1" d="M0 28.444h39.111v3.556h-39.111v-3.556zM0 14.222h39.111v3.556h-39.111v-3.556zM0 0h39.111v3.556h-39.111v-3.556z"></path>
+</symbol>
 </defs>
 </svg>
