--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -1,9 +1,7 @@
 .l-header {
   position: relative;
   padding: 12px 25px;
-
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.15), 0 1px 0 0 rgba(0, 0, 0, 0.05);
-
   z-index: 3;
 
   .c-main-nav {
@@ -11,6 +9,24 @@
 
     @media #{$mq-medium} {
       display: flex;
+    }
+  }
+
+  .logo {
+    margin: 0;
+    height: 48px;
+    max-width: 259px;
+
+    background: asset-url('logo@2x.png') no-repeat left center;
+    background-size: 100%;
+
+    a {
+      display: block;
+      text-indent: -10000px;
+    }
+
+    h1 {
+      margin: 0;
     }
   }
 
@@ -27,32 +43,16 @@
     &:hover { fill: $color-1; }
   }
 
-  // .mobile-menu, .mobile-drawer {
-  //   @media screen and (min-width: $breakpoint-tablet) {
-  //     display: none;
-  //   }
-  // }
+  .icon-close {
+    width: 15px;
+    height: 15px;
+    margin-top: 4px;
+    cursor: pointer;
 
-  .logo {
-    margin: 0;
-    height: 48px;
-    max-width: 259px;
-
-    background: asset-url('logo@2x.png') no-repeat left top;
-    background-size: 100%;
-
-    a {
-      display: block;
-      text-indent: -10000px;
-    }
-
-    h1 {
-      margin: 0;
-    }
+    &:hover { fill: $color-1; }
   }
-}
 
-.c-header {
+
   .desktop-menu {
     display: block;
 
@@ -69,7 +69,7 @@
           height: 46px;
           margin: 0;
           text-indent: -10000px;
-          background: asset-url('logo@2x.png') no-repeat left top;
+          background: asset-url('logo@2x.png') no-repeat left center;
           background-size: 100%;
         }
       }
@@ -140,39 +140,6 @@
     @media screen and (min-width: 870px) {
       display: none;
     }
-
-    .logo {
-      margin: 0;
-      flex-basis: 180px;
-      flex-shrink: 0;
-
-      h1 {
-        height: 35px;
-        margin: 0;
-        text-indent: calc(-100vw - 1000px);
-        background: asset-url('logo@2x.png') no-repeat left top;
-        background-size: 100%;
-      }
-    }
-
-    .hamburger-menu {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      height: 17px;
-      flex-basis: 20px;
-      flex-shrink: 0;
-      cursor: pointer;
-      z-index: 1003;
-      -webkit-tap-highlight-color: transparent;
-
-      > span {
-        display: block;
-        height: 2px;
-        background-color: $color-1;
-        transition: opacity .3s ease-out, transform .3s ease-in-out;
-      }
-    }
   }
 
   .mobile-drawer {
@@ -225,6 +192,8 @@
               position: absolute;
               top: 5px;
               right: 6px;
+              left: auto;
+              width: 30px;
             }
           }
 
@@ -239,25 +208,6 @@
             }
           }
         }
-      }
-
-      /* The hamburger icon transform into a close one */
-      & + .wrapper .hamburger-menu span {
-
-        &:first-of-type {
-          transform: translateY(7.5px) rotate(-45deg);
-          transform-origin: center;
-        }
-
-        &:nth-of-type(2) {
-          opacity: 0;
-        }
-
-        &:last-of-type {
-          transform: translateY(-7.5px) rotate(45deg);
-          transform-origin: center;
-        }
-
       }
     }
   }
