Set filtered countries list

--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,8 +1,20 @@
 <section class="c-section-index country-index">
-  <div class="search-container wrapper">
-    <input class="c-title -bigger js-search-list" id="search-input" placeholder="<%= t 'search_placeholder' %>" /><br/>
-    <a href="#search-list" class="c-button -filled -color-3"><%= t 'search' %></a>
-    <div id="search-list"></div>
+  <div class="row">
+    <div class="column small-12 medium-12">
+      <div id="search-input"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="column small-12 medium-12">
+      <a href="#search-list" class="c-button -filled -color-3"><%= t 'search' %></a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="column small-12 medium-12">
+      <div id="search-list"></div>
+    </div>
   </div>
 </section>
 
