Search index grid & other details

--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,20 +1,16 @@
-<section class="c-section-index country-index">
-  <div class="row">
+<section class="c-section-index country-index wrapper">
+  <div class="row collapse">
     <div class="column small-12 medium-12">
       <div id="search-input"></div>
     </div>
   </div>
 
-  <div class="row">
+  <div class="row collapse">
     <div class="column small-12 medium-12">
       <a href="#search-list" class="c-button -filled -color-3"><%= t 'search' %></a>
     </div>
   </div>
 
-  <div class="row">
-    <div class="column small-12 medium-12">
-      <div id="search-list"></div>
-    </div>
-  </div>
+  <div id="search-list"></div>
 </section>
 
