--- a/app/assets/javascripts/templates/search_list.hbs
+++ b/app/assets/javascripts/templates/search_list.hbs
@@ -1,10 +1,24 @@
-{{#each regions as |countries region|}}
-  <h3 class="c-card-title -border-1 -color-5 -normal single-list-title">{{region}}</h3>
-  <div class="list-grid">
-    {{#each countries as |country|}}
-      <div class="item -1-2 -tablet-1-3">
-        <a class="item-link" href="/countries/{{country.country_iso_3}}">{{country.name}}</a>
+{{#if regions}}
+  {{#each regions as |countries region|}}
+    <div class="row collapse">
+      <div class="small-12 medium-12">
+        <h3 class="c-card-title -border-1 -color-5 -normal single-list-title">{{region}}</h3>
       </div>
-    {{/each}}
+    </div>
+    <div class="row collapse">
+      {{#each countries as |country|}}
+        <div class="column small-6 medium-4 list-grid">
+          <div class="item">
+            <a class="item-link" href="/countries/{{country.country_iso}}">{{country.name}}</a>
+          </div>
+        </div>
+      {{/each}}
+    </div>
+  {{/each}}
+{{else}}
+  <div class="row collapse">
+    <div class="column small-12 medium-12">
+      <p>No results.</p>
+    </div>
   </div>
-{{/each}}
+{{/if}}
