--- a/app/assets/javascripts/templates/cancer_types_list.hbs
+++ b/app/assets/javascripts/templates/cancer_types_list.hbs
@@ -1,15 +1,18 @@
-{{#if regions}}
-  {{#each regions as |countries region|}}
+{{#if groups}}
+  {{#each groups as |cancerTypes group|}}
     <div class="row collapse">
       <div class="small-12 medium-12">
-        <h3 class="c-card-title -border-1 -color-5 -normal single-list-title">{{region}}</h3>
+        <h3 class="c-card-title -border-1 -color-5 -normal single-list-title">
+          {{group}}
+        </h3>
       </div>
     </div>
     <div class="row collapse">
-      {{#each countries as |country|}}
+      {{#each cancerTypes as |cancerType|}}
         <div class="column small-6 medium-4 list-grid">
           <div class="item">
-            <a class="item-link" href="/countries/{{country.country_iso}}">{{country.name}}</a>
+            <a class="item-link"
+              href="/cancer-types/{{cancerType.id}}">{{cancerType.name}}</a>
           </div>
         </div>
       {{/each}}
