--- a/app/views/shared/_main_nav.html.erb
+++ b/app/views/shared/_main_nav.html.erb
@@ -5,6 +5,9 @@
   <li class="<%= active_page?(countries_path) ? '-active' : '' %>">
     <%= link_to (t 'countries'), countries_path %></a>
   </li>
+  <li class="<%= active_page?(cancers_path) ? '-active' : '' %>">
+    <%= link_to (t 'cancer_types'), cancers_path %></a>
+  </li>
   <li class="<%= active_page?(about_path) ? '-active' : '' %>">
     <%= link_to (t 'about'), about_path %></a>
   </li>
@@ -60,7 +63,7 @@
       <% end %>
     <li class="<%= active_page?(map_path) ? '-active' : '' %>"><%= link_to (t 'map'), map_path %></a></li>
     <li class="<%= active_page?(countries_path) ? '-active' : '' %>"><%= link_to (t 'countries'), countries_path %></a></li>
-    <!-- <li class="<%#= active_page?(cancers_path) ? '-active' : '' %>"><%#= link_to (t 'cancer_types'), cancers_path %></a></li> -->
+    <li class="<%= active_page?(cancers_path) ? '-active' : '' %>"><%= link_to (t 'cancer_types'), cancers_path %></a></li>
     <li class="<%= active_page?(about_path) ? '-active' : '' %>"><%= link_to (t 'about'), about_path %></a></li>
   </ul>
   <% if user_signed_in? %>
