--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,8 +1,11 @@
 <div class="c-section-intro">
-  <div class="c-map-breadcrumbs">
+  <div class="c-map-upperbar">
     <div class="row collapse">
-      <div class="column small-12">
-        <div id="breadcrumbs"></div>
+      <div class="column small-12 medium-6">
+        <div class="-map-breadcrumbs" id="breadcrumbs"></div>
+      </div>
+      <div class="column small-12 medium-6">
+        <div class="-map-legends" id="legends"></div>
       </div>
     </div>
   </div>
