--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -34,7 +34,7 @@
           </div>
           <div class="number-info">
             <label class="title">Daly datasets</label>
-            <p class="number">5</p>
+            <p class="number">0</p>
           </div>
         </div>
       </div>
@@ -46,10 +46,22 @@
           <a href="#" class="c-button -inverse">+ Event</a>
         </div>
       </div>
-      <ul class="c-section-menu wrapper -color-0">
-        <li><%= link_to (t 'projects'), country_path(request.query_parameters.merge({ type: 'org-project-markers' })), :class => !params['type'] ? '-active' : active_param?('type','org-project-markers') %></li>
-        <li><%= link_to (t 'events'), country_path(request.query_parameters.merge({ type: 'org-event-markers' })), :class => active_param?('type','org-event-markers') %></li>
-      </ul>
+    </div>
+    <div class="section-tabnav">
+      <div id="dataTabNav" class="c-tabnav">
+        <div class="row collapse">
+          <div class="column small-12">
+            <ul class="tabnav-list">
+               <% @filters.each do |filter| %>
+                <%# @class = !params['type'] and filter == "projects" ? "-active" : active_param?('type', filter) %>
+                <li class="tabnav-item">
+                  <a class="js-btn-mapmenu-type" href="#" data-type="<%= filter %>"><%= t (filter) %></a>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
