--- a/app/assets/stylesheets/components/_section-index.scss
+++ b/app/assets/stylesheets/components/_section-index.scss
@@ -38,7 +38,7 @@
     padding-bottom: 100px;
   }
 
-  .js-search-list {
+  .js-search-list input {
     width: 100%;
     border: none;
     margin-bottom: 20px;
