--- a/app/assets/stylesheets/layouts/_footer.scss
+++ b/app/assets/stylesheets/layouts/_footer.scss
@@ -35,9 +35,7 @@
     }
 
     > li {
-      margin-left: 30px;
-
-      &:first-of-type { margin-right: 0; }
+      margin-right: 30px;
 
       &.-big {
         font-size: $font-size-x-medium;
