--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -7,26 +7,30 @@
       </div>
     </div>
 	</div>
-  <div class="row wrapper">
-    <div class="column small-12 medium-12">
-	    <h2>Examples of what a user can do through the GCPM are:</h2>
-    	<ul class="row -no-pad">
-    		<li class="column small-12 medium-4"><span class="icon -share"></span>Share cancer-related projects and events with the global oncology community</li>
-    		<li class="column small-12 medium-4"><span class="icon -search"></span>Search for people, projects, and events in a specific country or as related to a specific cancer type</li>
-    		<li class="column small-12 medium-4"><span class="icon -connect"></span>Connect with people with similar interests</li>
-    		<li class="column small-12 medium-4"><span class="icon -view"></span>View epidemiological heat maps that show cancer burden by country</li>
-    		<li class="column small-12 medium-4"><span class="icon -more"></span>And more!</li>
-    	</ul>
+  <div class="wrapper">
+    <div class="row">
+      <div class="column small-12 medium-12">
+  	    <h2>Examples of what a user can do through the GCPM are:</h2>
+      	<ul class="row -no-pad">
+      		<li class="column small-12 medium-4"><span class="icon -share"></span>Share cancer-related projects and events with the global oncology community</li>
+      		<li class="column small-12 medium-4"><span class="icon -search"></span>Search for people, projects, and events in a specific country or as related to a specific cancer type</li>
+      		<li class="column small-12 medium-4"><span class="icon -connect"></span>Connect with people with similar interests</li>
+      		<li class="column small-12 medium-4"><span class="icon -view"></span>View epidemiological heat maps that show cancer burden by country</li>
+      		<li class="column small-12 medium-4"><span class="icon -more"></span>And more!</li>
+      	</ul>
+      </div>
     </div>
   </div>
   <span class="delimiter"></span>
-  <div class="row wrapper">
-    <div class="column small-12 medium-9">
-    	<p>For more suggestions on how to get started using the GCPM, see the <a href="#">FAQ</a>.</p>
-    	<p>If you would like to contribute to the Global Cancer Project Map, or provide feedback to the management team, we can be reached at <a href="mailto:data@globalonc.org">data@globalonc.org</a>.</p>
-      <br/>
-      <h2>Acknowledgments</h2>
-      <p>The GCPM was made possible through an initial alliance between the <a href="#">U.S. National Cancer Institute Center for Global Health and Global Oncology, Inc.</a> The American Society for Clinical Oncology and Union for International Cancer Control also contributed scientific and programmatic input. The website was developed by the creative digital agency vizzuality.</p>
+  <div class="wrapper">
+    <div class="row">
+      <div class="column small-12 medium-9">
+      	<p>For more suggestions on how to get started using the GCPM, see the <a href="#">FAQ</a>.</p>
+      	<p>If you would like to contribute to the Global Cancer Project Map, or provide feedback to the management team, we can be reached at <a href="mailto:data@globalonc.org">data@globalonc.org</a>.</p>
+        <br/>
+        <h2>Acknowledgments</h2>
+        <p>The GCPM was made possible through an initial alliance between the <a href="#">U.S. National Cancer Institute Center for Global Health and Global Oncology, Inc.</a> The American Society for Clinical Oncology and Union for International Cancer Control also contributed scientific and programmatic input. The website was developed by the creative digital agency vizzuality.</p>
+      </div>
     </div>
   </div>
 </section>
