--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,59 +1,64 @@
 <div class="c-section-intro">
   <div class="c-map-breadcrumbs">
-    <div class="row collapse">
-      <div class="column small-12">
-        <div id="breadcrumbs"></div>
+    <div class="wrapper">
+      <div class="row collapse">
+        <div class="column small-12">
+          <div id="breadcrumbs"></div>
+        </div>
       </div>
     </div>
   </div>
 
-  <!-- <button id="btn-clear-filters" class="btn-reset-filters c-button -filled -inverse">Clear filters</button> -->
   <div id="map" class="c-map"></div>
 
-  <!-- <div id="map-tooltip" class="c-map-tooltip"></div> -->
-
   <div id="dataTabNav" class="c-tabnav">
-    <div class="row collapse">
-      <div class="column small-12">
-        <ul class="tabnav-list">
-           <% @filters.each do |filter| %>
-            <%# @class = !params['type'] and filter == "projects" ? "-active" : active_param?('type', filter) %>
-            <li class="tabnav-item">
-              <a class="js-btn-mapmenu-type" href="#" data-type="<%= filter %>"><%= t (filter) %></a>
-            </li>
-          <% end %>
-        </ul>
+    <div class="wrapper">
+      <div class="row collapse">
+        <div class="column small-12">
+          <ul class="tabnav-list">
+             <% @filters.each do |filter| %>
+              <li class="tabnav-item">
+                <%= link_to t(filter),
+                  map_path(request.query_parameters.merge({ data: filter })),
+                  class: "js-btn-mapmenu-type",
+                  remote: true,
+                  data: { type: filter }
+                %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
-
-<!-- <div id="map-layers-tooltip" class="c-tooltip -tip-left"></div> -->
-
 <!-- toolbar -->
-<div id="toolbar" class="c-toolbar"></div>
+<div class="c-toolbar">
+  <div class="wrapper">
+    <div class="row collapse">
+      <div class="column small-12">
+        <div id="toolbar"></div>
+      </div>
+    </div>
+  </div>
+</div>
 
-<!-- c-map-share -->
-<%# render partial: "map-share" %>
-
-<!-- c-map-tooltips -->
-<%# render partial: "map-tooltips" %>
-
-<!-- c-grid-proyects -->
 <div class="c-card-grid" id="content">
-  <%= render('map/' + @current_type) %>
+  <% if @current_type == 'events' %>
+    <%= render 'events/grid', items: @items %>
+  <% else %>
+    <%= render 'projects/grid', items: @items %>
+  <% end %>
 </div>
 
 <div class="c-card-grid">
-<% @realLimit = params['limit'] ? params['limit'].to_i : 1 %>
-  <% if (@realLimit * @limit) < @projectsCount %>
-    <div class="c-pagination-button">
-      <%= link_to (t 'show_more'),
-              map_path(request.query_parameters.merge({ limit: (params['limit'] ? params['limit'].to_i + 1 : 2 )  })),
-              class: "circle-button",
-              remote: true,
-              data: {magic: true} %>
-    </div>
-  <% end %>
+  <div class="c-pagination-button">
+    <% page = params.key(:page) && params[:page] ? params[:page] + 1 : 2 %>
+    <%= link_to (t 'show_more'),
+      map_path(request.query_parameters.merge({ page: page })),
+      class: "circle-button",
+      remote: true
+    %>
+  </div>
 </div>
