--- a/app/views/projects/_grid.html.erb
+++ b/app/views/projects/_grid.html.erb
@@ -1,38 +1,6 @@
-<!-- <div class="card -1-2 -tablet-1-4">
-  <h4 class="c-legend-title">
-    <div class="icon -color-3"></div>
-    Breast
-  </h4>
-  <h2 class="c-title -big">215</h2>
-</div>
-
-<div class="card -1-2 -tablet-1-4">
-  <h4 class="c-legend-title">
-    <div class="icon -color-2"></div>
-    NON-MELANOMA SKIN CANCER
-  </h4>
-  <h2 class="c-title -big">215</h2>
-</div>
-
-<div class="card -1-2 -tablet-1-4">
-  <h4 class="c-legend-title">
-    <div class="icon"></div>
-    TRACHEA, BRONCHUS AND LUNG
-  </h4>
-  <h2 class="c-title -big">215</h2>
-</div>
-
-<div class="card -1-2 -tablet-1-4">
-  <h4 class="c-legend-title">
-    <div class="icon -color-4"></div>
-    Other
-  </h4>
-  <h2 class="c-title -big">215</h2>
-</div> -->
-
-<% if @projects && @projects.size() > 0 %>
+<% if items && items.size() > 0 %>
   <!-- Project cards -->
-  <% @projects.each do |p| %>
+  <% items.each do |p| %>
     <div class="card -mobile-large-1-2 -tablet-1-3">
       <h4 class="c-card-title -border-2">
         <a href="/map?investigators[]=<%= p.project_leads.first.try(:id) %>" class="tag">
