--- a/app/assets/stylesheets/components/_tabnav.scss
+++ b/app/assets/stylesheets/components/_tabnav.scss
@@ -25,7 +25,7 @@
   left: 0;
   width: 100%;
 
-  background-color: rgba(#5aade4, 0.7);
+  background-color: rgba($color-1, 0.8);
 
   z-index: 1;
 
