removed ol shared files for map, added new tabnav controller

--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -22,7 +22,7 @@
                   map_path(request.query_parameters.merge({ data: filter })),
                   class: "js-btn-mapmenu-type",
                   remote: true,
-                  data: { type: filter }
+                  data: { datatype: filter }
                 %>
               </li>
             <% end %>
