--- a/app/assets/javascripts/templates/breadcrumbs.hbs
+++ b/app/assets/javascripts/templates/breadcrumbs.hbs
@@ -1,5 +1,4 @@
 <ul>
-    <li></li>
   {{#each data}}
     <li>
         <span class="rhombus -last"></span>
@@ -7,7 +6,8 @@
       <a href="{{link}}"
         class="js-breadcrumb"
         {{#if value}}data-value="{{value}}"{{/if}}
-      >{{name}}</a>
+      > <span class="globe-icon"><svg><use xlink:href="#icon-globe"</svg></span>
+        {{name}}</a>
         <span class="rhombus"></span>
 
     </li>
