fix badge alignment

--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -119,6 +119,7 @@
               position: absolute;
               top: 0;
               right: -3px;
+              text-align: center;
             }
           }
         }
