sync breadcrumbs events

--- a/app/assets/javascripts/templates/breadcrumbs.hbs
+++ b/app/assets/javascripts/templates/breadcrumbs.hbs
@@ -1,16 +1,18 @@
 <ul>
   {{#each data}}
-    <li>
+    {{#if value}}
+      <li>
         <span class="rhombus -last"></span>
         <span class="arrow-tail"></span>
-      <a href="{{link}}"
-        class="js-breadcrumb"
-         name={{name}}
-        {{#if value}}data-value="{{name}}"{{/if}}
-      > <span class="globe-icon"><svg><use xlink:href="#icon-globe"</svg></span>
-        {{value}}</a>
+        <a href="{{link}}"
+          class="js-breadcrumb"
+          name={{name}}
+          {{#if value}}data-value="{{value}}"{{/if}}
+        > <span class="globe-icon"><svg><use xlink:href="#icon-globe"</svg></span>
+          {{value}}
+        </a>
         <span class="rhombus"></span>
-
-    </li>
+      </li>
+    {{/if}}
   {{/each}}
 </ul>
