--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,10 +1,12 @@
 <div class="c-section-intro">
   <div class="c-map-upperbar">
-    <div class="row collapse">
-      <div class="column small-12 medium-6">
-        <div class="-map-breadcrumbs" id="breadcrumbs"></div>
-      </div>
-      <div class="column small-12 medium-6">
+    <div class="wrapper">
+      <div class="row collapse">
+        <div class="column small-12 medium-6">
+          <div class="-map-breadcrumbs" id="breadcrumbs"></div>
+        </div>
+        <div class="column small-12 medium-6">
+        </div>
       </div>
     </div>
   </div>
