--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -53,12 +53,7 @@
 </div>
 
 <div class="c-card-grid">
-  <div class="c-pagination-button">
-    <% page = params.key(:page) && params[:page] ? params[:page] + 1 : 2 %>
-    <%= link_to (t 'show_more'),
-      map_path(request.query_parameters.merge({ page: page })),
-      class: "circle-button",
-      remote: true
-    %>
+  <div class="c-pagination-button" id="show_more_button_filtered">
+    
   </div>
 </div>
