--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -44,6 +44,9 @@
   </div>
 </div>
 
+<div class="c-legends-bar">
+  <div class="-legends-row row" id="legends"></div>
+</div>
 <div class="c-card-grid" id="content">
   <% if @current_type == 'events' %>
     <%= render 'events/grid', items: @items %>
