--- a/app/assets/javascripts/templates/legends.hbs
+++ b/app/assets/javascripts/templates/legends.hbs
@@ -4,8 +4,8 @@
         {{#if blueCircle}}<span class="circle-icon -blue"></span>{{/if}}
         {{#if blueSquare}}<span class="square-icon -blue"></span>{{/if}}
         {{#if whiteSquare}}<span class="square-icon -white"></span>{{/if}}
-        {{#if blueMarker}} <svg class="marker-icon -blue"><use xlink:href="#icon-marker"></use></svg>{{/if}}
-        {{#if orangeMarker}} <svg class="marker-icon -orange"><use xlink:href="#icon-marker"></use></svg>{{/if}}
+        {{#if orangeSquare}} <span class="square-icon -orange"></span>{{/if}}
+        {{#if orangeCircle}} <span class="circle-icon -orange"></span>{{/if}}
         {{description}}
       </span>
         <div class="number">{{number}}</div>
