--- a/app/assets/stylesheets/components/_legends-bar.scss
+++ b/app/assets/stylesheets/components/_legends-bar.scss
@@ -56,6 +56,11 @@
             border: 1px solid rgba($color-7, 0.2);
             background-color: $color-3;
           }
+
+          &.-orange {
+            border: 1px solid #e86b16;
+            background-color: $color-6;
+          }
         }
       }
 
@@ -65,6 +70,7 @@
           height: 20px;
           width: 20px;
           margin-right: 5px;
+
           &.-orange {
             fill: $color-6;
             stroke: #e86b16;
