--- a/app/views/projects/_grid.html.erb
+++ b/app/views/projects/_grid.html.erb
@@ -1,26 +1,40 @@
 <% if items && items.size() > 0 %>
-  <!-- Project cards -->
-  <% items.each do |p| %>
-    <div class="card -mobile-large-1-2 -tablet-1-3">
-      <h4 class="c-card-title -border-2">
-        <a href="/map?investigators[]=<%= p.project_leads.first.try(:id) %>" class="tag">
-          <%= p.project_leads.first.try(:name) %>
-        </a>
-      </h4>
-      <%= link_to project_path(p.id), { :class => "link" } do %>
-        <h3 class="c-title"><%= p.title %></h3>
-      <% end %>
-      <!-- Project summary replaced by cancer tags -->
-      <div class="c-tag-list -closer">
-        <% p.cancer_types.each do |t| %>
-        <a href="/map?cancer_types[]=<%= t.id %>" class="tag"><%= t.name %></a>
+  <div class="c-card-grid">
+    <!-- Project cards -->
+    <% items.each do |p| %>
+      <div class="card -mobile-large-1-2 -tablet-1-3">
+        <h4 class="c-card-title -border-2">
+          <a href="/map?investigators[]=<%= p.project_leads.first.try(:id) %>" class="tag">
+            <%= p.project_leads.first.try(:name) %>
+          </a>
+        </h4>
+        <%= link_to project_path(p.id), { :class => "link" } do %>
+          <h3 class="c-title"><%= p.title %></h3>
         <% end %>
+        <!-- Project summary replaced by cancer tags -->
+        <div class="c-tag-list -closer">
+          <% p.cancer_types.each do |t| %>
+          <a href="/map?cancer_types[]=<%= t.id %>" class="tag"><%= t.name %></a>
+          <% end %>
+        </div>
       </div>
-    </div>
-  <% end %>
-
+    <% end %>
+  </div>
 <% else %>
   <div class="c-no-items -padding wrapper">
     <p>No projects</p>
+  </div>
+<% end %>
+<%= "--------#{more}......" %>
+<% if more %>
+  <div class="c-card-grid">
+    <div class="c-pagination-button">
+      <% page = params.key(:page) && params[:page] ? params[:page] + 1 : 2 %>
+      <%= link_to (t 'show_more'),
+        map_path(request.query_parameters.merge({ page: page })),
+        class: "circle-button",
+        remote: true
+      %>
+    </div>
   </div>
 <% end %>
