fixed legends row style

--- a/app/assets/javascripts/templates/legends.hbs
+++ b/app/assets/javascripts/templates/legends.hbs
@@ -1,5 +1,5 @@
 {{#each data}}
-    <div class="column small-4">
+    <div class="column small-4 small-centered">
       <span class="legend">
         {{#if blueCircle}}<span class="circle-icon -blue"></span>{{/if}}
         {{#if blueSquare}}<span class="square-icon -blue"></span>{{/if}}
