--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -45,7 +45,7 @@
 </div>
 
 <div class="c-legends-bar">
-<div class="-legends-row row" id="legends"></div>
+<div class="-legends-row row collapse" id="legends"></div>
 </div>
 
 <div class="c-card-grid" id="content">
