--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -47,9 +47,9 @@
 </div>
 
 
-<div class="c-legends-bar">
-<div class="-legends-row row collapse" id="legends"></div>
-</div>
+
+<div id="legends"></div>
+
 
 <div id="content">
 
