--- a/app/views/projects/_grid.html.erb
+++ b/app/views/projects/_grid.html.erb
@@ -28,11 +28,12 @@
 
 <% if more %>
   <div class="c-card-grid">
-    <div class="c-pagination-button" id="show_more_button_filtered">
-      <% page = params.key(:page) && params[:page] ? params[:page] + 1 : 2 %>
+    <div class="c-pagination-button">
+      <% page = @page + 1 %>
       <%= link_to (t 'show_more'),
         map_path(request.query_parameters.merge({ page: page })),
         class: "circle-button",
+        id: 'showMoreButton',
         remote: true
       %>
     </div>
