--- a/app/views/events/_grid.html.erb
+++ b/app/views/events/_grid.html.erb
@@ -1,21 +1,23 @@
 <% if items && items.size() > 0 %>
-  <!-- Events cards -->
-  <% items.each do |e| %>
-    <div class="card -mobile-large-1-2 -tablet-1-3">
-      <% if e.country? %>
-        <h4 class="c-card-title -border-2">
-          <% country = Country.find_by( country_name: e.country ) %>
-          <a href="/map?type=events&group=countries&countries[]=<%= country ? country.id : nil %>">
-            <%= e.city %>, <%= e.country %>
-          </a>
-        </h4>
-      <% end %>
-      <%= link_to event_path(e.id), { :class => "link" } do %>
-        <h3 class="c-title"><%= e.title %></h3>
-      <% end %>
-      <p><%= truncate(e.description, :length => 300) %></p>
-    </div>
-  <% end %>
+  <div class="c-card-grid">
+    <!-- Events cards -->
+    <% items.each do |e| %>
+      <div class="card -mobile-large-1-2 -tablet-1-3">
+        <% if e.country? %>
+          <h4 class="c-card-title -border-2">
+            <% country = Country.find_by( country_name: e.country ) %>
+            <a href="/map?type=events&group=countries&countries[]=<%= country ? country.id : nil %>">
+              <%= e.city %>, <%= e.country %>
+            </a>
+          </h4>
+        <% end %>
+        <%= link_to event_path(e.id), { :class => "link" } do %>
+          <h3 class="c-title"><%= e.title %></h3>
+        <% end %>
+        <p><%= truncate(e.description, :length => 300) %></p>
+      </div>
+    <% end %>
+  </div>
 <% else %>
   <div class="c-no-items -padding wrapper">
     <p>No events</p>
@@ -24,11 +26,12 @@
 
 <% if more %>
   <div class="c-card-grid">
-    <div class="c-pagination-button" id="show_more_button_filtered">
+    <div class="c-pagination-button">
       <% page = params.key(:page) && params[:page] ? params[:page] + 1 : 2 %>
       <%= link_to (t 'show_more'),
         map_path(request.query_parameters.merge({ page: page })),
         class: "circle-button",
+        id: 'showMoreButton',
         remote: true
       %>
     </div>
