renaming views and removing turbolinks

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <title><%= @title ? @title + ' - ' : nil %>Global Cancer Project Map</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': true %>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
   </head>
 
   <body>
